[package]
name = "mnnrs"
version = "0.1.4"
edition = "2021"
authors = ["baiyue"]
description = " Rust implementation of mnn, a lightweight neural network inference framework, with separated static library for cross-platform compilation."
repository = "https://github.com/Baiyuetribe/mnnrs"
license = "MIT"
keywords = ["mnn", "mnn_rust", "rust_mnn", "mnnrs"]
categories = ["api-bindings", "development-tools"]
exclude = ["demo/*"]

[dependencies]
anyhow = "1.0.86"
encoding_rs = "0.8.34"
libc = "0.2.155"

[build-dependencies]
bindgen = "0.69.4"

[lints.rust]
#unsafe_code = "forbid"
warnings = "allow" # deny, warn, allow, or forbid

[features]
cpu = [] # default
